--- a/css/error2.css
+++ b/css/error2.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap");
 /**************** 반응형 ****************/
 html, body, h1, h2, h3, h4, h5, h6, p, div, header, footer, section, aside, article, ul, ol, li, dl, dd, dt, fieldset {
   margin: 0;
@@ -55,7 +56,7 @@ a:link, a:visited, a:hover, a:active {
   clear: both;
 }
 
-html {
+body {
   font-family: "Open Sans", sans-serif;
 }
 
@@ -78,31 +79,24 @@ html {
   align-items: stretch;
   flex-wrap: nowrap;
   flex-direction: row;
+  height: 100vh;
 }
 
 .wrapper .container-wrap .side-wrap {
+  position: relative;
   border: 1px solid black;
   background-color: white;
-  z-index: 1;
-  overflow-y: scroll;
-  min-height: 100vh;
+  height: 100vh;
+  overflow-y: auto;
   min-width: 350px;
   max-width: 350px;
-}
-
-.wrapper .container-wrap .side-wrap::-webkit-scrollbar {
-  width: 0;
-  /*스크롤바의 너비*/
-}
-
-@media screen and (max-width: 1200px) {
-  .wrapper .container-wrap .side-wrap {
-    left: 0;
-  }
+  transition: all 0.5s;
+  font-family: "Noto Sans KR", sans-serif;
 }
 
 @media screen and (max-width: 992px) {
   .wrapper .container-wrap .side-wrap {
+    position: fixed;
     left: -9999px;
   }
 }
@@ -117,19 +111,17 @@ html {
   border-left: 0;
   border-right: 0;
   cursor: pointer;
-}
-
-.wrapper .container-wrap .side-wrap .box div {
-  margin: 8px;
+  padding: 16px;
 }
 
 .wrapper .container-wrap .side-wrap .box .title {
-  margin-top: 16px;
   font-weight: bold;
   font-size: 1.25em;
+  padding-bottom: 12px;
 }
 
 .wrapper .container-wrap .side-wrap .box .content {
+  font-weight: 300;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   /* 라인수 */
@@ -149,7 +141,7 @@ html {
 .wrapper .container-wrap .content-wrapper {
   border: 1px solid black;
   min-height: 100vh;
-  width: calc(100vw - 350px);
+  overflow-y: auto;
 }
 
 @media screen and (max-width: 992px) {
@@ -162,7 +154,7 @@ html {
 .wrapper .container-wrap .content-wrapper .content-wrap {
   margin: 2em auto;
   border: 1px solid black;
-  height: calc(100% - 4em);
+  min-height: calc(100% - 4em);
   width: calc(100% - 4em);
 }
 
