--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap');
 $primary : #435da5;
 $danger : #f00;
 $warnig : #394739;
