--- a/sass/error2.scss
+++ b/sass/error2.scss
@@ -1,8 +1,9 @@
 @import 'base';
 
-html{font-family: $open-en;}
+body{font-family: $open-en;}
 
 .wrapper{
+
   .popup-on{
     position: fixed;
     top: 0;
@@ -17,22 +18,23 @@ html{font-family: $open-en;}
 }   
   .container-wrap{
     @include fx($w:nowrap);
+    height: 100vh;
     .side-wrap{
+      position: relative;
       @include border;
       background-color: white;
-      z-index: 1;
-      overflow-y: scroll;
-      min-height: 100vh;
+      height: 100vh;
+      overflow-y: auto;
       min-width: 350px;
       max-width: 350px;
+      transition: all 0.5s;
+      font-family: $noto-kr;
       //overflow-x: hidden;
-      &::-webkit-scrollbar { 
-        width: 0; /*스크롤바의 너비*/ 
-      }
-      @include LG{
-        left : 0;
-      }
+      // &::-webkit-scrollbar { 
+      //   width: 0; /*스크롤바의 너비*/ 
+      // }
       @include MD{
+        position: fixed;
         left : -9999px;
       }
       .box{
@@ -41,27 +43,25 @@ html{font-family: $open-en;}
         border-left: 0;
         border-right: 0;
         cursor: pointer;
-        div{
-          margin: 8px;
-        }
+        padding: 16px;
         .title{
-          margin-top: 16px;
           font-weight: bold;
           font-size: 1.25em;
+          padding-bottom: 12px;
         }
         .content{
+          font-weight: 300;
             @include multiEllipsis($line:3,$lh:1.5em);
         }
         &:hover >.content{
           text-decoration :underline;
         }
-
       }
     }
     .content-wrapper{
       @include border;
       min-height: 100vh;
-      width: calc(100vw - 350px);
+      overflow-y: auto;
       @include MD{
         left: 0;
         width: calc(100vw);
@@ -69,7 +69,7 @@ html{font-family: $open-en;}
       .content-wrap{
         margin: 2em auto;
         @include border;
-        height: calc(100% - 4em);
+        min-height: calc(100% - 4em);
         width: calc(100% - 4em);
         .content{
           padding: 2em;
@@ -102,7 +102,6 @@ html{font-family: $open-en;}
                   .date{
                     margin-top: 4px;
                     font-weight: normal;
-  
                   }
                 }
               }
@@ -118,7 +117,6 @@ html{font-family: $open-en;}
     }
   }
 }
-
 .menu-wrap{
   position: fixed;
   bottom: 8px;
