--- a/sass/error2.scss
+++ b/sass/error2.scss
@@ -37,6 +37,10 @@ body{font-family: $open-en;}
         position: fixed;
         left : -9999px;
       }
+      @include XS{
+        min-width: 100vw;
+        max-width: 100vw;
+      }
       .box{
         @include fx($direction:column);
         @include border;
@@ -71,6 +75,10 @@ body{font-family: $open-en;}
         @include border;
         min-height: calc(100% - 4em);
         width: calc(100% - 4em);
+        @include XS{
+          width: calc(100%);
+          margin: 0;
+        }
         .content{
           padding: 2em;
           .title-wrap{
