--- a/sass/error2.scss
+++ b/sass/error2.scss
@@ -138,6 +138,7 @@ body{font-family: $open-en;}
     }
     li{
       padding-right: 0.75em;
+      cursor: pointer;
       input[type="text"]{
         width: 200px;
         border-radius: 5px;
