--- a/css/error2.css
+++ b/css/error2.css
@@ -146,6 +146,7 @@ body {
 }
 
 .wrapper .container-wrap .content-wrapper {
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   border: 1px solid black;
   min-height: 100vh;
   overflow-y: auto;
@@ -239,6 +240,13 @@ body {
   z-index: 99;
 }
 
+@media screen and (max-width: 576px) {
+  .menu-wrap {
+    right: 8px;
+    bottom: 12px;
+  }
+}
+
 .menu-wrap ul {
   display: flex;
   justify-content: flex-start;
@@ -250,7 +258,11 @@ body {
 
 @media screen and (max-width: 576px) {
   .menu-wrap ul {
-    font-size: 1em;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    flex-direction: column;
   }
 }
 
@@ -259,17 +271,45 @@ body {
   cursor: pointer;
 }
 
-.menu-wrap ul li input[type="text"] {
+@media screen and (max-width: 576px) {
+  .menu-wrap ul li {
+    margin: 8px 0;
+  }
+}
+
+.menu-wrap ul li .search {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.menu-wrap ul li .search input[type="text"] {
   width: 200px;
   border-radius: 5px;
   opacity: 0.3;
   transition: all 0.3s;
 }
 
-.menu-wrap ul li input[type="text"]:focus {
+@media screen and (max-width: 576px) {
+  .menu-wrap ul li .search input[type="text"] {
+    width: 0;
+    visibility: hidden;
+  }
+}
+
+.menu-wrap ul li .search input[type="text"]:focus {
   opacity: 1;
   font-weight: bold;
   width: 250px;
+}
+
+@media screen and (max-width: 576px) {
+  .menu-wrap ul li .search:hover input[type="text"] {
+    width: 200px;
+    visibility: visible;
+  }
 }
 
 .menu-wrap ul .side-sw {
