--- a/sass/error2.scss
+++ b/sass/error2.scss
@@ -63,6 +63,7 @@ body{font-family: $open-en;}
       }
     }
     .content-wrapper{
+      @include shadow;
       @include border;
       min-height: 100vh;
       overflow-y: auto;
@@ -130,26 +131,50 @@ body{font-family: $open-en;}
   bottom: 8px;
   left: 8px;
   z-index: 99;
+  @include XS{
+    right: 8px;
+    bottom: 12px;
+  }
   ul{
     @include fx($v:$CT);
     font-size: 1.375em;
     @include XS{
-      font-size: 1em;
+      @include fx($v:$FE,$direction:$col);
     }
+    
     li{
       padding-right: 0.75em;
       cursor: pointer;
-      input[type="text"]{
-        width: 200px;
-        border-radius: 5px;
-        opacity: 0.3;
-        transition: all 0.3s;
-        &:focus{
-          opacity: 1;
-          font-weight: bold;
-          width: 250px;
+      @include XS{
+        margin: 8px 0;
+      }
+      .search{
+        input[type="text"]{
+          width: 200px;
+          border-radius: 5px;
+          opacity: 0.3;
+          transition: all 0.3s;
+          @include XS{
+            width: 0;
+            //border: none;
+            visibility: hidden;
+          }
+          &:focus{
+            opacity: 1;
+            font-weight: bold;
+            width: 250px;
+          }
+        }
+        @include fx($v:$CT);
+        @include XS{
+          &:hover input[type="text"]{
+            width: 200px;
+            // border:2px;
+            visibility: visible;
+          }
         }
       }
+      
       &:last-child{
         // margin-left: 0.625em;
       }
