--- a/css/error2.css
+++ b/css/error2.css
@@ -242,8 +242,8 @@ body {
 
 @media screen and (max-width: 576px) {
   .menu-wrap {
-    right: 8px;
-    bottom: 12px;
+    right: 16px;
+    bottom: 48px;
   }
 }
 
@@ -260,7 +260,7 @@ body {
   .menu-wrap ul {
     display: flex;
     justify-content: flex-start;
-    align-items: flex-end;
+    align-items: flex-start;
     flex-wrap: wrap;
     flex-direction: column;
   }
@@ -290,6 +290,7 @@ body {
   border-radius: 5px;
   opacity: 0.3;
   transition: all 0.3s;
+  margin-left: 4px;
 }
 
 @media screen and (max-width: 576px) {
