--- a/sass/error2.scss
+++ b/sass/error2.scss
@@ -132,14 +132,14 @@ body{font-family: $open-en;}
   left: 8px;
   z-index: 99;
   @include XS{
-    right: 8px;
-    bottom: 12px;
+    right: 16px;
+    bottom: 48px;
   }
   ul{
     @include fx($v:$CT);
     font-size: 1.375em;
     @include XS{
-      @include fx($v:$FE,$direction:$col);
+      @include fx($v:$FS,$direction:$col);
     }
     
     li{
@@ -154,9 +154,9 @@ body{font-family: $open-en;}
           border-radius: 5px;
           opacity: 0.3;
           transition: all 0.3s;
+          margin-left: 4px;
           @include XS{
             width: 0;
-            //border: none;
             visibility: hidden;
           }
           &:focus{
@@ -169,14 +169,9 @@ body{font-family: $open-en;}
         @include XS{
           &:hover input[type="text"]{
             width: 200px;
-            // border:2px;
             visibility: visible;
           }
         }
-      }
-      
-      &:last-child{
-        // margin-left: 0.625em;
       }
     }
     .side-sw{
