--- a/sass/error2.scss
+++ b/sass/error2.scss
@@ -184,6 +184,9 @@ body{font-family: $open-en;}
             opacity: 1;
             font-weight: bold;
             width: 250px;
+            @include XS{
+              width: 200px;
+            }
           }
         }
       }
