--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap");
 /**************** 반응형 ****************/
 html, body, h1, h2, h3, h4, h5, h6, p, div, header, footer, section, aside, article, ul, ol, li, dl, dd, dt, fieldset {
   margin: 0;
@@ -172,7 +174,6 @@ a:link, a:visited, a:hover, a:active {
   border: 1px solid black;
   width: 180px;
   height: 100%;
-  overflow-y: scroll;
   background-color: white;
 }
 
@@ -207,6 +208,8 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .wrap .center-wrapper .side-wrapper .serach-wrap {
+  position: absolute;
+  bottom: 0;
   padding: 0.5em;
 }
 
@@ -237,15 +240,24 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content {
-  border: 1px solid black;
+  position: relative;
   width: 23%;
   height: 300px;
   margin-right: 2%;
   margin-bottom: 2%;
+  padding: 1em;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap {
   font-size: 1.125em;
+}
+
+.wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .i-wrap {
+  position: absolute;
+  right: 0.25em;
+  top: 0;
+  transform: rotate(45deg);
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .image-wrap img {
@@ -296,6 +308,12 @@ a:link, a:visited, a:hover, a:active {
     width: 98%;
     height: 300px;
   }
+}
+
+.wrap .center-wrapper .content-wrapper .footer-wrap {
+  width: 100%;
+  border: 1px solid black;
+  height: 100px;
 }
 
 .up-arrow {
