--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,10 @@ a:link, a:visited, a:hover, a:active {
   clear: both;
 }
 
+.wrap {
+  color: #4C4C6D;
+}
+
 .wrap .popup-on {
   position: fixed;
   top: 0;
@@ -72,6 +76,7 @@ a:link, a:visited, a:hover, a:active {
 .wrap .header-wrapper {
   border: 1px solid black;
   height: 8vh;
+  background-color: #FFE194;
 }
 
 .wrap .header-wrapper .header-wrap {
@@ -168,6 +173,7 @@ a:link, a:visited, a:hover, a:active {
   flex-direction: row;
   position: relative;
   height: 92vh;
+  background-color: #B8DFD8;
 }
 
 .wrap .center-wrapper .side-wrapper {
@@ -240,6 +246,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content {
+  background-color: #E8F6EF;
   position: relative;
   width: 23%;
   height: 300px;
@@ -312,7 +319,7 @@ a:link, a:visited, a:hover, a:active {
 
 .wrap .center-wrapper .content-wrapper .footer-wrap {
   width: 100%;
-  border: 1px solid black;
+  background-color: #FFE194;
   height: 100px;
 }
 
