--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 //&
 
 .wrap{
+    color: #4C4C6D;
     .popup-on{
         position: fixed;
         top: 0;
@@ -19,6 +20,7 @@
     .header-wrapper{
         border: 1px solid black;
         height: 8vh;
+        background-color: #FFE194;
         .header-wrap{
             width: 100%;
             height: 100%;
@@ -85,6 +87,7 @@
         @include fx;
         position: relative;
         height: 92vh;
+        background-color: #B8DFD8;
         .side-wrapper{
             border: 1px solid black;
             width: 180px;
@@ -134,6 +137,7 @@
                 margin: 0 auto;
                 padding: 30px 30px;
                 .content{
+                    background-color: #E8F6EF;
                     position: relative;
                     width: 23%;
                     height: 300px;
@@ -224,7 +228,7 @@
             }
             .footer-wrap{
                 width: 100%;
-                @include border;
+                background-color: #FFE194;
                 height: 100px;
             }
         }
