--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,7 @@ a:link, a:visited, a:hover, a:active {
 
 .wrap {
   color: #4C4C6D;
+  font-weight: bold;
 }
 
 .wrap .popup-on {
@@ -74,7 +75,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .wrap .header-wrapper {
-  border: 1px solid black;
+  border: 2px solid black;
   height: 8vh;
   background-color: #B8DFD8;
 }
@@ -224,11 +225,19 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .wrap .center-wrapper .content-wrapper {
-  border: 1px solid black;
   width: calc(100% - 180px);
   overflow-x: hidden;
   overflow-y: scroll;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
   height: 100%;
+}
+
+.wrap .center-wrapper .content-wrapper::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari, Opera*/
 }
 
 @media screen and (max-width: 992px) {
@@ -243,17 +252,17 @@ a:link, a:visited, a:hover, a:active {
   width: 102%;
   margin: 0 auto;
   padding: 30px 30px;
+  margin-bottom: 8vh;
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content {
   background-color: #FFE194;
   position: relative;
   width: 23%;
-  height: 300px;
+  height: 200px;
   margin-right: 2%;
   margin-bottom: 2%;
-  padding: 1em;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap {
@@ -272,13 +281,19 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .info {
-  padding: 0.5em;
+  padding: 1em;
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .info .title {
   font-weight: bold;
+  font-size: 1.5em;
   margin: 0.625em 0;
   text-align: center;
+  display: inline-block;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .info div {
@@ -286,41 +301,40 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .wrap .center-wrapper .content-wrapper .content-wrap .content .info-wrap .info div span::after {
-  content: " / ";
+  content: " ";
 }
 
 @media screen and (max-width: 1200px) {
   .wrap .center-wrapper .content-wrapper .content-wrap .content {
     width: 31%;
-    height: 300px;
   }
 }
 
 @media screen and (max-width: 992px) {
   .wrap .center-wrapper .content-wrapper .content-wrap .content {
     width: 31%;
-    height: 300px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .wrap .center-wrapper .content-wrapper .content-wrap .content {
     width: 48%;
-    height: 300px;
   }
 }
 
 @media screen and (max-width: 576px) {
   .wrap .center-wrapper .content-wrapper .content-wrap .content {
     width: 98%;
-    height: 300px;
   }
 }
 
 .wrap .center-wrapper .content-wrapper .footer-wrap {
   width: 100%;
-  background-color: #FFE194;
-  height: 100px;
+  border: 2px solid black;
+  background-color: #B8DFD8;
+  height: 8vh;
+  position: absolute;
+  bottom: 0;
 }
 
 .up-arrow {
