--- a/css/main.css
+++ b/css/main.css
@@ -178,10 +178,11 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .wrap .center-wrapper .side-wrapper {
-  border: 1px solid black;
+  position: relative;
+  border: 2px solid black;
   width: 180px;
   height: 100%;
-  background-color: white;
+  background-color: #B8DFD8;
 }
 
 @media screen and (max-width: 992px) {
@@ -225,6 +226,7 @@ a:link, a:visited, a:hover, a:active {
 }
 
 .wrap .center-wrapper .content-wrapper {
+  position: relative;
   width: calc(100% - 180px);
   overflow-x: hidden;
   overflow-y: scroll;
@@ -335,6 +337,7 @@ a:link, a:visited, a:hover, a:active {
   height: 8vh;
   position: absolute;
   bottom: 0;
+  left: 0;
 }
 
 .up-arrow {
@@ -360,7 +363,7 @@ a:link, a:visited, a:hover, a:active {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: solid 1px black;
+  border: 2px solid black;
   width: 90vw;
   background-color: white;
   display: none;
