--- a/sass/main.scss
+++ b/sass/main.scss
@@ -90,10 +90,11 @@
         height: 92vh;
         background-color: #E8F6EF;
         .side-wrapper{
-            border: 1px solid black;
+            position: relative;
+            border: 2px solid black;
             width: 180px;
             height:100%;
-            background-color: white;
+            background-color: #B8DFD8;
             @include MD{
                 position: absolute;
                 left: -9999px;
@@ -123,7 +124,7 @@
             }
         }
         .content-wrapper{
-            
+            position: relative;
             width: calc(100% - 180px);
             overflow-x: hidden;
             overflow-y: scroll;
@@ -232,6 +233,7 @@
                 height: 8vh;
                 position: absolute;
                 bottom: 0;
+                left: 0;
             }
             
         }
@@ -275,7 +277,7 @@
 
 .popup-wrap{
     @include center(150);
-    border: solid 1px black;
+    @include border($px:2px);
     width: 90vw;
     background-color: white;
     display: none;
