--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,21 @@
 @import 'base';
 
+$bgColor:#E8F6EF;
+$postColor:#FFE194;
+$headerColor:#B8DFD8;
+$sideColor:white;
+$fontColor:#4C4C6D;
+
 //@include
 //&
+body{
+    color: $fontColor;
+    font-family: $noto-kr;
+    font-weight: 300;
+}
 
 .wrap{
-    color: #4C4C6D;
-    font-weight: bold;
+
     .popup-on{
         position: fixed;
         top: 0;
@@ -21,7 +31,7 @@
     .header-wrapper{
         border: 2px solid black;
         height: 8vh;
-        background-color: #B8DFD8;
+        background-color: $headerColor;
         .header-wrap{
             width: 100%;
             height: 100%;
@@ -88,13 +98,13 @@
         @include fx;
         position: relative;
         height: 92vh;
-        background-color: #E8F6EF;
+        background-color: $bgColor;
         .side-wrapper{
             position: relative;
             border: 2px solid black;
             width: 180px;
             height:100%;
-            background-color: #B8DFD8;
+            background-color: $sideColor;
             @include MD{
                 position: absolute;
                 left: -9999px;
@@ -139,9 +149,8 @@
                 width: 102%;
                 margin: 0 auto;
                 padding: 30px 30px;
-                margin-bottom: 8vh;
                 .content{
-                    background-color: #FFE194;
+                    background-color: $postColor;
                     position: relative;
                     width: 23%;
                     height: 200px;
