--- a/sass/main.scss
+++ b/sass/main.scss
@@ -160,6 +160,7 @@ body{
                     .info-wrap{
                         font-size: 1.125em;
                         .i-wrap{
+                            font-size: 1.25em;
                             position: absolute;
                             right: 0.25em;
                             top: 0;
