--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ body {
 
 .wrap .header-wrapper {
   border: 2px solid black;
-  height: 8vh;
+  height: 50px;
   background-color: #B8DFD8;
 }
 
@@ -174,7 +174,7 @@ body {
   flex-wrap: wrap;
   flex-direction: row;
   position: relative;
-  height: 92vh;
+  height: calc(100vh - 50px);
   background-color: #E8F6EF;
 }
 
